fix: 94 - [tour] added white background and width 100% to merge-blocks-desktop section + removed margins to prevent gap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -325,6 +325,10 @@ body.tour main .section {
   background: var(--background-color);
 }
 
+body.tour main .section p {
+  margin-bottom: 0;
+}
+
 body.tour .default-content-wrapper ul {
   margin-left: 1.75rem;
 }
@@ -337,7 +341,8 @@ body.tour main .section-organize-visit {
 
 body.tour main .section .default-content-wrapper p {
   color: #444;
-  margin: 0 0 28px;
+  margin: 0;
+  padding-bottom: 28px;
 }
 
 /* stylelint-disable-next-line no-descending-specificity */
@@ -345,6 +350,7 @@ body.tour main h2 {
   font-family: var(--heading-font-family);
   font-weight: 400;
   margin-bottom: 3px;
+  margin-top: 0;
 }
 
 /* stylelint-disable-next-line no-descending-specificity */
